# OpenGLEngine

./: CMakeLists.txt  README.md  main.cpp  settings.cpp  settings.hpp
components/: Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Terrain.cpp  Terrain.hpp  Transform.cpp  Transform.hpp
core/: InputManager.cpp  InputManager.hpp  Script.hpp  Time.cpp  Time.hpp  World.cpp  World.hpp
interfaces/: IEvents.cpp  IEvents.hpp
models/: Model.cpp  Model.hpp
prefabs/: GameObject.cpp  GameObject.hpp
rendering/: DisplayManager.cpp  DisplayManager.hpp  Loader.cpp  Loader.hpp  OBJLoader.cpp  OBJLoader.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  StaticShader.cpp  StaticShader.hpp  Texture.cpp  Texture.hpp
shaders/: fragShader.glsl  vertShader.glsl
util/: Bitmap.cpp  Bitmap.hpp  util.cpp  util.hpp
